--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bank-balance-more-redux",
+  "name": "bank-balance",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +9,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
